src/parser/Helix.g
grammar Helix;

options {
    output = AST;
}

tokens {
    LIST_FUNCTIONS; // List of functions (the root of the tree)
    DEFFUNC;
    ASSIGN;     // Assignment instruction
    COORD;
    ACCESS;
    PAIRACCESS;
    PARAMS;     // List of parameters in the declaration of a function
    FUNCALL;    // Function call
    ARGLIST;    // List of arguments passed in a function call
    LIST_INSTR; // Block of instructions
    BOOLEAN;    // Boolean atom (for Boolean constants "true" or "false")
    PVALUE;     // Parameter by value in the list of parameters
    PREF;       // Parameter by reference in the list of parameters
}

@header {
package parser;
}

@lexer::header {
package parser;
}

// A program is a list of functions
prog	: func+ EOF -> ^(LIST_FUNCTIONS func+)
        ;
            
// A function has a name, a list of parameters and a block of instructions	
func	: DEF ID params block_instructions -> ^(DEF ID params block_instructions)
        ;

// The list of parameters grouped in a subtree (it can be empty)
params	: '(' paramlist? ')' -> ^(PARAMS paramlist?)
        ;

// Parameters are separated by commas
paramlist: param (','! param)*
        ;

// Parameters with & as prefix are passed by reference
// Only one node with the name of the parameter is created
param   :   '&' id=ID -> ^(PREF[$id,$id.text])
        |   id=ID -> ^(PVALUE[$id,$id.text])
        ;

// A list of instructions, all of them gouped in a subtree
block_instructions
        :	 '{' instruction (instruction)* '}' NL
            -> ^(LIST_INSTR instruction+)
        ;

instruction
        : line_instruction NL!
        | block_instruction
        ;

// The different types of instructions
line_instruction
        :	assign          // Assignment
        |   funcall         // Call to a procedure (no result produced)
        |	return_stmt     // Return statement
        |                   // Nothing
        ;

block_instruction
        :   ite_stmt
        |   while_stmt
        ;

// Assignment
assign	:	accessor eq=EQUAL expr -> ^(ASSIGN[$eq,":="] accessor expr)
        ;


// if-then-else (else is optional)
ite_stmt	:	IF^ expr block_instructions (ELSE! block_instructions)?
            ;

// while statement
while_stmt	:	WHILE^ expr block_instructions
            ;

// Return statement with an expression
return_stmt	:	RETURN^ expr?
        ;

// Grammar for expressions with boolean, relational and aritmetic operators
expr    :   boolterm (OR^ boolterm)*
        ;

boolterm:   boolfact (AND^ boolfact)*
        ;

boolfact:   num_expr ((EQUAL^ | NOT_EQUAL^ | LT^ | LE^ | GT^ | GE^) num_expr)?
        ;

num_expr:   term ( (PLUS^ | MINUS^) term)*
        ;

term    :   factor ( (MUL^ | DIV^ | MOD^) factor)*
        ;

factor  :   (NOT^ | PLUS^ | MINUS^)? atom
        ;

// Atom of the expressions (variables, integer and boolean literals).
// An atom can also be a function call or another expression
// in parenthesis
atom    :   NUM
        |   coord
        |   id_access
        |   (b=TRUE | b=FALSE)  -> ^(BOOLEAN[$b,$b.text])
        |   funcall
        |   '('! expr ')'!
        ;

coord   : '[' n1=expr',' n2=expr']' -> ^(COORD $n1 $n2)
        ;

accessor    :	id_access
            |   pair_access
	        ;

pair_access :   '[' id1=ID ',' id2=ID ']' -> ^(PAIRACCESS $id1 $id2)
            ;

id_access   :	(id=ID -> $id) ('.' id_atr -> ^(ACCESS $id id_atr))?
            ;

id_atr  :   LAT
        |   LNG
        ;

// A function call has a lits of arguments in parenthesis (possibly empty)
funcall :   builtin '(' expr_list? ')' -> ^(DEFFUNC builtin ^(ARGLIST expr_list?))
        |   ID '(' expr_list? ')' -> ^(FUNCALL ID ^(ARGLIST expr_list?))
        ;

builtin :   GET_GPS
        |   MOVE
        |   FORWARD
        |   ROTATE
        |   TAKEOFF
        |   LAND
        |   SLEEP
        |   UPF
        |   DOWNF
        |   RIGHT
        |   LEFT
        |   BACKWARDS
        |   LOOKAT
        ;

// A list of expressions separated by commas
expr_list:  expr (','! expr)*
        ;

// Built-in function tokens
GET_GPS :   'get_gps';
MOVE    :   'move';
FORWARD :   'forward';
ROTATE  :   'rotate';
TAKEOFF :   'take_off';
LAND    :   'land';
SLEEP   :   'sleep';
UPF      :   'up';
DOWNF    :   'down';
RIGHT   :   'right';
LEFT    :   'left';
BACKWARDS : 'backwards';
LOOKAT  :   'look_at';

// Default tokens
NL  : '\n' '\n'*;
EQUAL	: '=' ;
NOT_EQUAL: '!=' ;
LT	    : '<' ;
LE	    : '<=';
GT	    : '>';
GE	    : '>=';
PLUS	: '+' ;
MINUS	: '-' ;
MUL	    : '*';
DIV	    : '/';
MOD	    : '%' ;
NOT	    : 'not';
AND	    : 'and' ;
OR	    : 'or' ;	
IF  	: 'if' ;
THEN	: 'then' ;
ELSE	: 'else' ;
WHILE	: 'while' ;
DO	    : 'do' ;
DEF	    : 'def' ;
RETURN	: 'return' ;
TRUE    : 'true' ;
FALSE   : 'false';
LAT     : 'lat';
LNG     : 'lng';
ID  	:	('a'..'z'|'A'..'Z'|'_') ('a'..'z'|'A'..'Z'|'0'..'9'|'_')* ;
NUM     :	'0'..'9'+ ('.' '0'..'9'+|);

// C-style comments
COMMENT	: '//' ~('\n'|'\r')* '\r'? '\n' {$channel=HIDDEN;}
    	| '/*' ( options {greedy=false;} : . )* '*/' {$channel=HIDDEN;}
    	;

// Strings (in quotes) with escape sequences        
STRING  :  '"' ( ESC_SEQ | ~('\\'|'"') )* '"'
        ;

fragment
ESC_SEQ
    :   '\\' ('b'|'t'|'n'|'f'|'r'|'\"'|'\''|'\\')
    ;

// White spaces
WS  	: ( ' '
        | '\t'
        | '\r'
        ) {$channel=HIDDEN;}
    	;
//        | '\n'
