src/Helix/parser/HelixParser.java
// $ANTLR 3.4 /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g 2017-05-17 20:53:18

package Helix.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class HelixParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCESS", "AND", "ARGLIST", "ASSIGN", "BACKWARDS", "BOOLEAN", "COMMENT", "COORD", "DEF", "DEFFUNC", "DIV", "DO", "DOWNF", "ELSE", "EQUAL", "ESC_SEQ", "FALSE", "FORWARD", "FUNCALL", "GE", "GET_GPS", "GT", "ID", "IF", "LAND", "LAT", "LE", "LEFT", "LIST_FUNCTIONS", "LIST_INSTR", "LNG", "LOOKAT", "LT", "MINUS", "MOD", "MOVE", "MUL", "NL", "NOT", "NOT_EQUAL", "NUM", "OR", "PAIRACCESS", "PARAMS", "PLUS", "PREF", "PVALUE", "RETURN", "RIGHT", "ROTATE", "SLEEP", "STRING", "TAKEOFF", "THEN", "TRUE", "UPF", "WHILE", "WS", "'&'", "'('", "')'", "','", "'.'", "'['", "']'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int ACCESS=4;
    public static final int AND=5;
    public static final int ARGLIST=6;
    public static final int ASSIGN=7;
    public static final int BACKWARDS=8;
    public static final int BOOLEAN=9;
    public static final int COMMENT=10;
    public static final int COORD=11;
    public static final int DEF=12;
    public static final int DEFFUNC=13;
    public static final int DIV=14;
    public static final int DO=15;
    public static final int DOWNF=16;
    public static final int ELSE=17;
    public static final int EQUAL=18;
    public static final int ESC_SEQ=19;
    public static final int FALSE=20;
    public static final int FORWARD=21;
    public static final int FUNCALL=22;
    public static final int GE=23;
    public static final int GET_GPS=24;
    public static final int GT=25;
    public static final int ID=26;
    public static final int IF=27;
    public static final int LAND=28;
    public static final int LAT=29;
    public static final int LE=30;
    public static final int LEFT=31;
    public static final int LIST_FUNCTIONS=32;
    public static final int LIST_INSTR=33;
    public static final int LNG=34;
    public static final int LOOKAT=35;
    public static final int LT=36;
    public static final int MINUS=37;
    public static final int MOD=38;
    public static final int MOVE=39;
    public static final int MUL=40;
    public static final int NL=41;
    public static final int NOT=42;
    public static final int NOT_EQUAL=43;
    public static final int NUM=44;
    public static final int OR=45;
    public static final int PAIRACCESS=46;
    public static final int PARAMS=47;
    public static final int PLUS=48;
    public static final int PREF=49;
    public static final int PVALUE=50;
    public static final int RETURN=51;
    public static final int RIGHT=52;
    public static final int ROTATE=53;
    public static final int SLEEP=54;
    public static final int STRING=55;
    public static final int TAKEOFF=56;
    public static final int THEN=57;
    public static final int TRUE=58;
    public static final int UPF=59;
    public static final int WHILE=60;
    public static final int WS=61;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public HelixParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public HelixParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return HelixParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:32:1: prog : ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) ;
    public final HelixParser.prog_return prog() throws RecognitionException {
        HelixParser.prog_return retval = new HelixParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        HelixParser.func_return func1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func=new RewriteRuleSubtreeStream(adaptor,"rule func");
        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:32:6: ( ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) )
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:32:8: ( func )+ EOF
            {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:32:8: ( func )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DEF) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:32:8: func
            	    {
            	    pushFollow(FOLLOW_func_in_prog174);
            	    func1=func();

            	    state._fsp--;

            	    stream_func.add(func1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog177);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: func
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 32:18: -> ^( LIST_FUNCTIONS ( func )+ )
            {
                // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:32:21: ^( LIST_FUNCTIONS ( func )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                if ( !(stream_func.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_func.hasNext() ) {
                    adaptor.addChild(root_1, stream_func.nextTree());

                }
                stream_func.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class func_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:36:1: func : DEF ID params block_instructions -> ^( DEF ID params block_instructions ) ;
    public final HelixParser.func_return func() throws RecognitionException {
        HelixParser.func_return retval = new HelixParser.func_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token DEF3=null;
        Token ID4=null;
        HelixParser.params_return params5 =null;

        HelixParser.block_instructions_return block_instructions6 =null;


        Object DEF3_tree=null;
        Object ID4_tree=null;
        RewriteRuleTokenStream stream_DEF=new RewriteRuleTokenStream(adaptor,"token DEF");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_block_instructions=new RewriteRuleSubtreeStream(adaptor,"rule block_instructions");
        RewriteRuleSubtreeStream stream_params=new RewriteRuleSubtreeStream(adaptor,"rule params");
        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:36:6: ( DEF ID params block_instructions -> ^( DEF ID params block_instructions ) )
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:36:8: DEF ID params block_instructions
            {
            DEF3=(Token)match(input,DEF,FOLLOW_DEF_in_func216);  
            stream_DEF.add(DEF3);


            ID4=(Token)match(input,ID,FOLLOW_ID_in_func218);  
            stream_ID.add(ID4);


            pushFollow(FOLLOW_params_in_func220);
            params5=params();

            state._fsp--;

            stream_params.add(params5.getTree());

            pushFollow(FOLLOW_block_instructions_in_func222);
            block_instructions6=block_instructions();

            state._fsp--;

            stream_block_instructions.add(block_instructions6.getTree());

            // AST REWRITE
            // elements: DEF, ID, block_instructions, params
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:41: -> ^( DEF ID params block_instructions )
            {
                // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:36:44: ^( DEF ID params block_instructions )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_DEF.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, stream_params.nextTree());

                adaptor.addChild(root_1, stream_block_instructions.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "func"


    public static class params_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:1: params : '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) ;
    public final HelixParser.params_return params() throws RecognitionException {
        HelixParser.params_return retval = new HelixParser.params_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal7=null;
        Token char_literal9=null;
        HelixParser.paramlist_return paramlist8 =null;


        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleSubtreeStream stream_paramlist=new RewriteRuleSubtreeStream(adaptor,"rule paramlist");
        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:8: ( '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) )
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:10: '(' ( paramlist )? ')'
            {
            char_literal7=(Token)match(input,63,FOLLOW_63_in_params252);  
            stream_63.add(char_literal7);


            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:14: ( paramlist )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID||LA2_0==62) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:14: paramlist
                    {
                    pushFollow(FOLLOW_paramlist_in_params254);
                    paramlist8=paramlist();

                    state._fsp--;

                    stream_paramlist.add(paramlist8.getTree());

                    }
                    break;

            }


            char_literal9=(Token)match(input,64,FOLLOW_64_in_params257);  
            stream_64.add(char_literal9);


            // AST REWRITE
            // elements: paramlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 40:29: -> ^( PARAMS ( paramlist )? )
            {
                // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:32: ^( PARAMS ( paramlist )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:40:41: ( paramlist )?
                if ( stream_paramlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramlist.nextTree());

                }
                stream_paramlist.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "params"


    public static class paramlist_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramlist"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:44:1: paramlist : param ( ',' ! param )* ;
    public final HelixParser.paramlist_return paramlist() throws RecognitionException {
        HelixParser.paramlist_return retval = new HelixParser.paramlist_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal11=null;
        HelixParser.param_return param10 =null;

        HelixParser.param_return param12 =null;


        Object char_literal11_tree=null;

        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:44:10: ( param ( ',' ! param )* )
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:44:12: param ( ',' ! param )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_param_in_paramlist283);
            param10=param();

            state._fsp--;

            adaptor.addChild(root_0, param10.getTree());

            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:44:18: ( ',' ! param )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==65) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:44:19: ',' ! param
            	    {
            	    char_literal11=(Token)match(input,65,FOLLOW_65_in_paramlist286); 

            	    pushFollow(FOLLOW_param_in_paramlist289);
            	    param12=param();

            	    state._fsp--;

            	    adaptor.addChild(root_0, param12.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramlist"


    public static class param_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "param"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:49:1: param : ( '&' id= ID -> ^( PREF[$id,$id.text] ) |id= ID -> ^( PVALUE[$id,$id.text] ) );
    public final HelixParser.param_return param() throws RecognitionException {
        HelixParser.param_return retval = new HelixParser.param_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token id=null;
        Token char_literal13=null;

        Object id_tree=null;
        Object char_literal13_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");

        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:49:9: ( '&' id= ID -> ^( PREF[$id,$id.text] ) |id= ID -> ^( PVALUE[$id,$id.text] ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==62) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:49:13: '&' id= ID
                    {
                    char_literal13=(Token)match(input,62,FOLLOW_62_in_param314);  
                    stream_62.add(char_literal13);


                    id=(Token)match(input,ID,FOLLOW_ID_in_param318);  
                    stream_ID.add(id);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 49:23: -> ^( PREF[$id,$id.text] )
                    {
                        // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:49:26: ^( PREF[$id,$id.text] )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(PREF, id, (id!=null?id.getText():null))
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:50:13: id= ID
                    {
                    id=(Token)match(input,ID,FOLLOW_ID_in_param341);  
                    stream_ID.add(id);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 50:19: -> ^( PVALUE[$id,$id.text] )
                    {
                        // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:50:22: ^( PVALUE[$id,$id.text] )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(PVALUE, id, (id!=null?id.getText():null))
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "param"


    public static class block_instructions_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block_instructions"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:54:1: block_instructions : '{' instruction ( instruction )* '}' NL -> ^( LIST_INSTR ( instruction )+ ) ;
    public final HelixParser.block_instructions_return block_instructions() throws RecognitionException {
        HelixParser.block_instructions_return retval = new HelixParser.block_instructions_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal14=null;
        Token char_literal17=null;
        Token NL18=null;
        HelixParser.instruction_return instruction15 =null;

        HelixParser.instruction_return instruction16 =null;


        Object char_literal14_tree=null;
        Object char_literal17_tree=null;
        Object NL18_tree=null;
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:55:9: ( '{' instruction ( instruction )* '}' NL -> ^( LIST_INSTR ( instruction )+ ) )
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:55:12: '{' instruction ( instruction )* '}' NL
            {
            char_literal14=(Token)match(input,69,FOLLOW_69_in_block_instructions375);  
            stream_69.add(char_literal14);


            pushFollow(FOLLOW_instruction_in_block_instructions377);
            instruction15=instruction();

            state._fsp--;

            stream_instruction.add(instruction15.getTree());

            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:55:28: ( instruction )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==BACKWARDS||LA5_0==DOWNF||LA5_0==FORWARD||LA5_0==GET_GPS||(LA5_0 >= ID && LA5_0 <= LAND)||LA5_0==LEFT||LA5_0==LOOKAT||LA5_0==MOVE||LA5_0==NL||(LA5_0 >= RETURN && LA5_0 <= SLEEP)||LA5_0==TAKEOFF||(LA5_0 >= UPF && LA5_0 <= WHILE)||LA5_0==67) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:55:29: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_block_instructions380);
            	    instruction16=instruction();

            	    state._fsp--;

            	    stream_instruction.add(instruction16.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            char_literal17=(Token)match(input,70,FOLLOW_70_in_block_instructions384);  
            stream_70.add(char_literal17);


            NL18=(Token)match(input,NL,FOLLOW_NL_in_block_instructions386);  
            stream_NL.add(NL18);


            // AST REWRITE
            // elements: instruction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 56:13: -> ^( LIST_INSTR ( instruction )+ )
            {
                // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:56:16: ^( LIST_INSTR ( instruction )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(LIST_INSTR, "LIST_INSTR")
                , root_1);

                if ( !(stream_instruction.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_instruction.hasNext() ) {
                    adaptor.addChild(root_1, stream_instruction.nextTree());

                }
                stream_instruction.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block_instructions"


    public static class instruction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "instruction"
    // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:59:1: instruction : ( line_instruction NL !| block_instruction );
    public final HelixParser.instruction_return instruction() throws RecognitionException {
        HelixParser.instruction_return retval = new HelixParser.instruction_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL20=null;
        HelixParser.line_instruction_return line_instruction19 =null;

        HelixParser.block_instruction_return block_instruction21 =null;


        Object NL20_tree=null;

        try {
            // /Users/gonmolon/Documents/Universidad/3/CL/Helix/src/Helix/parser/Helix.g:60:9: ( line_instruction NL !| block_instruction )
            int alt6=2;
            int LA6_0 = input.LA(1);
